account/k8s/aws/security/account-auth-restrict-from-customer-without-headervalue.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-method-get
spec:
  selector:
    matchLabels:
      app: account-service
  action: DENY
  rules:
  - to:
    - operation:
        methods: ["GET"]
    when:
    - key: request.headers[x-user]
      notValues: ["admin"]
